--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-numpy==1.18.1
+flask==1.1.1
+gunicorn==19.9.0
+numpy>=1.18.1
 pandas==1.2.3
 matplotlib==3.4.1
 seaborn==0.11.1
-scipy==1.4.1
-flask==1.1.1
-gunicorn==19.9.0
+scipy>=1.4.1
+scikit_learn==0.22.1
+sklean
